syntax = "proto3";
package alkanes;

message uint128 {
  uint64 lo = 1;
  uint64 hi = 2;
}

message AlkaneId {
  uint128 block = 1;
  uint128 tx = 2;
}

message AlkaneTransfer {
  AlkaneId id = 1;
  uint128 value = 2;
}

message MessageContextParcel {
  repeated AlkaneTransfer alkanes = 1;
  bytes transaction = 2;
  bytes block = 3;
  uint64 height = 4;
  uint32 txindex = 6;
  bytes calldata = 5;
  uint32 vout = 7;
  uint32 pointer = 8;
  uint32 refund_pointer = 9;
}

message KeyValuePair {
  bytes key = 1;
  bytes value = 2;
}

message ExtendedCallResponse {
  repeated AlkaneTransfer alkanes = 1;
  repeated KeyValuePair storage = 2;
  bytes data = 3;
}

message SimulateResponse {
  ExtendedCallResponse execution = 1;
  uint64 gas_used = 2;
  string error = 3;
}

message AlkaneInventoryRequest {
  AlkaneId id = 1;
}

message AlkaneInventoryResponse {
  repeated AlkaneTransfer alkanes = 1;
}
